# homerunner

./: .gitmodules  CMakeLists.txt  build.sh  createeclipseproj.sh  gitversion.cmake  global.cmake
hr-actor-gesimpleac/: .cproject  .project  CMakeLists.txt
hr-actor-gesimpleac/src/: GESimpleAirCondition.cpp  GESimpleAirCondition.h
hr-actor-tplwifi/: .cproject  .project  CMakeLists.txt
hr-actor-tplwifi/resources/: protocol.txt
hr-actor-tplwifi/src/: TPLWifi.cpp  TPLWifi.h  TPLWifiSwitchablePlug.cpp  TPLWifiSwitchablePlug.h
hr-actor-tplwifi/test/: jsoncoder.cpp
hr-btleconnector-bluez/: .cproject  .project  CMakeLists.txt
hr-btleconnector-bluez/src/: BluezBTLEConnector.cpp  BluezBTLEConnector.h  CMakeLists.txt
hr-connector-bluez/: .cproject  .project  CMakeLists.txt  README.md
hr-connector-bluez/src/: .project  BluezBTLEConnector.cpp  BluezBTLEConnector.h
hr-connector-iguanair/: .cproject  .project  CMakeLists.txt
hr-connector-iguanair/src/: IguanaIRConnector.cpp  IguanaIRConnector.h
hr-engine-ecmascript/: .cproject  .project  CMakeLists.txt  README.md
hr-engine-ecmascript/lib/duktape-src/: duk_config.h  duk_source_meta.json  duktape.c  duktape.h
hr-engine-ecmascript/src/: ECMAScriptEngine.cpp  ECMAScriptEngine.h
hr-lib/: .cproject  .project  CMakeLists.txt
hr-lib/include/homerunner/: Exception.h  Module.h  ModuleFactory.h  ModuleManager.h  Node.h
hr-lib/include/homerunner/util/: Helper.h  Verison.h
hr-lib/interface/homerunner/: Address.vni  Engine.vni  Node.vni  Notification.vni
hr-lib/interface/homerunner/act/: DimmableLight.vni  Light.vni  RGBLight.vni  SimpleAirCondition.vni  SwitchablePlug.vni
hr-lib/interface/homerunner/connect/: BTLEConnector.vni  IRConnector.vni  IguanaUSBIRConnector.vni  JeeLinkConnector.vni
hr-lib/interface/homerunner/control/: DimmableLightCommand.vni  RGBLightCommand.vni  SimpleAirConditionCommand.vni  SwitchCommand.vni
hr-lib/interface/homerunner/sense/: ButtonState.vni  Humidity.vni  SwitchState.vni  Temperature.vni
hr-lib/lib/: CMakeLists.txt
hr-lib/src/: CMakeLists.txt  Exception.cpp  Helper.cpp  ModuleManager.cpp  Node.cpp
hr-node/: .cproject  .project  CMakeLists.txt
hr-node/src/: .project  CMakeLists.txt  ModuleManager.cpp  ModuleManager.h  Node.cpp  Node.h  main.cpp
resources/: Sketchbook.odp
